--- a/LearnHub/appsettings.json
+++ b/LearnHub/appsettings.json
@@ -9,5 +9,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=LearnHubDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-"AllowedHosts": "*"
+  "JwtIssuerOptions": {
+    "Issuer": "LearnHub",
+    "Audience": "https://localhost:44389/"
+  },
+  "AllowedHosts": "*"
 }
